# drishti

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a1b2c3d4e5f6_add_auth_fields_to_users.py  a7b8c9d0e1f2_add_name_to_missions.py  b2c3d4e5f6a7_add_drones_table.py  b8c9d0e1f2a3_add_connection_string_to_drones.py  c3d4e5f6a7b8_add_detection_verification.py  c9d0e1f2a3b4_add_telemetry_source_ip_to_drones.py  d0e1f2a3b4c5_add_flight_telemetry_to_drones.py  d34d793cdf83_initial_schema.py  d4e5f6a7b8c9_add_satellite_detection_to_alerts.py  e1f2a3b4c5d6_add_telemetry_paused_to_drones.py  e5f6a7b8c9d0_add_notes_to_satellite_detections.py  f6a7b8c9d0e1_add_satellite_detection_to_missions.py
apps/api/scripts/: create_admin.py  seed_admin_units.py
apps/api/src/drishti_api/: auth.py  config.py  dependencies.py  main.py
apps/api/src/drishti_api/models/: __init__.py  base.py  detection.py  drone.py  geo.py  health.py  intervention.py  iot.py  ml.py  satellite.py
apps/api/src/drishti_api/routers/: alerts.py  (+12 more)
apps/api/tests/: conftest.py  test_admin_units.py  test_alerts_router.py  test_auth.py  test_detections.py  test_drone_telemetry_service.py  test_drone_telemetry_worker.py  test_drones.py  test_health.py  test_mission_service.py  test_missions.py  test_models_domain.py  test_models_geo.py  test_risk_features.py  test_satellite.py  test_satellite_features.py  test_satellite_ingest_service.py  test_scan_alerting.py  test_sensors.py
(+109 files in other folders)
