[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drishti-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "geoalchemy2>=0.15.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.2.1",
    "celery>=5.4.0",
    "redis>=5.0.4",
    "boto3>=1.34.84",
    "shapely>=2.0.4",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "pystac-client>=0.8.3",
    "planetary-computer>=1.0.0",
    "rasterio>=1.3.10",
    "pyproj>=3.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
    "ruff==0.4.4",
    "mypy==1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/drishti_api"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
